--- a/part2/README
+++ b/part2/README
@@ -7,23 +7,23 @@ Assignment 2 Part 2
 
 Included Files:
 	Client folder files
-	-client.cpp
-	-consts_and_types.h
-	-draw_route.cpp/.h
-	-lcd_image.cpp/.h
-	-map_drawing.cpp/.h
-	-serial_handling.cpp/.h
-	-Makefile
+		-client.cpp
+		-consts_and_types.h
+		-draw_route.cpp/.h
+		-lcd_image.cpp/.h
+		-map_drawing.cpp/.h
+		-serial_handling.cpp/.h
+		-Makefile
 
 	Server folder files
-	-server.cpp
-	-digraph.cpp/.h
-	-dijksta.cpp/.h
-	-edmotonroads-2.0.1.txt
-	-heap.h
-	-Makefile
-	-serialport.cpp/.h
-	-wdigraph.h
+		-server.cpp
+		-digraph.cpp/.h
+		-dijksta.cpp/.h
+		-edmotonroads-2.0.1.txt
+		-heap.h
+		-Makefile
+		-serialport.cpp/.h
+		-wdigraph.h
 
 	-README
 	
@@ -40,17 +40,20 @@ Accessories:
 
 Wiring Instructions:
 	-Due to the tft displays nature of connecting to the arduino, we will be assuming the user has this part connected properly. As the display just sits ontop of the arduino.
-	-The joystick is slightly more complex so heres how it is wired JS will annotate the joystick connection side while A will annotate the arduino connection side
-		- JS ground --> A ground
-		- JS 5V --> A 5V
+	-The joystick is slightly more complex so heres how it is wired JS will annotate the joystick connection side while A will annotate the arduino connection side and BB will annotate the breadboard
+		- JS ground --> BB ground --> A ground
+		- JS 5V --> BB 5V --> A 5V
 		- JS VRx --> A analog pin 9
 		- JS VRy --> A analog pin 8
-		- JS sw --> A digital pin 53
-	- Wire two push buttons by connecting one side to power and the other to either the pin 45 or 47.
+		- JS SW --> A digital pin 53
+		-PushButton1 --> BB ground
+		-PushButton1 --> A pin 45
+		-PushButton2 --> BB ground
+		-PushButton2 --> A pin 47
 
 Running instructions:
 	-To run open two seperate terminals. In one go to the directory for the client side and type make upload if your arduino is correctly wired. 
-	-In the other terminal go to the directory where your server file is and type make. after the files compile you can then type ./server to run the file. Make sure before you run the server (i.e. ./server) your client side has successfully uploaded to the arduino.
+	-In the other terminal go to the directory where your server file is and type make. after the files compile you can then type ./server to run the file. Make sure before you run the server (i.e. ./server) your client side has successfully uploaded to the arduino. 
 	- After these steps your arduino should have the program uploaded on it and your tft display screen should be able to select two points with the joystick.
 
 
@@ -59,4 +62,5 @@ Notes and Assumptions
 	- The only chages were made to serial_handling.cpp, draw_route.cpp, and server.cpp
 	- The basis or server.cpp was taken from our Assignment 2 Part 1 solution.
 	- Our program can only process less than 500 waypoints otherwise the shared variable cannot support it
+	- There was a witch that possesed our code ocassionaly upon sharing the code between ourselves certain aspects that were working  before the exchange ceased to work. when the code was reverted back to its orginal state via CTRL Z the code would still have the aspect broken. The thing that seemed to fix this was unzipping the files again and restarting both terminals
 
